# cp-manager

./: .project  Brunel-Default.py  Brunel-SftPixel.py  Brunel-d0pikspipi.py  Brunel-velopix.py  README.txt  SftWithVP.py  bundle_distributable.sh  checkout_Brunel.sh  init.sh  myDDDB-LHCb-Upgrade-VP-Jun2014.nom.db  run_brunel_client.sh  run_server.sh
Brunel_v44r3/FastTrackAlg/options/: test.py
Brunel_v44r3/FastTrackD/cmt/: requirements
Brunel_v44r3/FastTrackIpc/FastTrackIpc/: IProtocol.h
Brunel_v44r3/FastTrackIpc/src/: SocketServer.cpp  ThreadedServer.cpp
Brunel_v44r3/FastTrackSvc/src/: FastTrackSvc.cpp
Brunel_v44r3/IpcGen/: IpcGen.proj
Brunel_v44r3/cmt/: project.cmt
Brunel_v45r0/CUDA/cmt/: requirements
Brunel_v45r0/GaudiKernel/cmt/: cleanup.csh  cleanup.sh  setup.csh  setup.sh
Brunel_v45r0/cmt/: project.cmt
Brunel_v47r2p1/: .project
Brunel_v47r2p1/CUDA/cmt/: cleanup.csh  cleanup.sh  setup.csh  setup.sh
Brunel_v47r2p1/GpuManager/GpuDriver/: CMakeLists.txt
Brunel_v47r2p1/GpuManager/GpuHandler/: CMakeLists.txt
Brunel_v47r2p1/GpuManager/GpuService/: CMakeLists.txt
Brunel_v47r2p1/cmake/: CUDA.cmake
Brunel_v47r2p1/cmt/: project.cmt
CodeGenerator/: Api.thrift  ApplyApi.cmd  UpdateApi.cmd
CodeGenerator/src/: IpcGenerator.n
CpManager/: CMakeLists.txt
CpManager/CpManager/CpServer/: CMakeLists.txt
CpManager/CpManager/CpServer/src/: AdminClient.cpp  AdminServer.cpp  AdminServer.h  App.h  CommandLine.cpp  CommandLine.h  ConnectionInfo.h  Controller.h  DataPacket.h  Logger.h  MainServer.cpp  MainServer.h
FastTrack/cmt/: project.cmt
FastTrackAlg/cmt/: requirements
FastTrackAlg/src/: FastTrackAlg.cpp  FastTrackAlg.h
FastTrackD/cmt/: requirements
FastTrackD/src/: App.cpp  App.h  CMakeLists.txt  Doxyfile.in  IProtocol.h  ITransport.h  Main.cpp  MessageQueue.cpp  MessageQueue.h  Protocol.cpp  SocketServer.cpp  SocketServer.h  Tracker.cpp  Tracker.h  TrackerHelper.cpp  TrackerHelper.h  main.cpp
FastTrackD/src/Api/: Tracker.cpp  Tracker.h  TrackerID.h  Tracker_impl.cpp
FastTrackD/src/api/: Tracker.cpp  Tracker.h  TrackerID.h  Tracker_impl.cpp
FastTrackD/src/pixeltbb/: pixel_tbb.h
FastTrackIpc/FastTrackIpc/: IConnector.h  IOException.h  IProcessor.h  IProtocol.h  ITransport.h  Protocol.h  SocketClient.h  SocketServer.h  SocketServerConnector.h  SystemException.h
FastTrackIpc/cmt/: requirements
FastTrackIpc/src/: Doxyfile.in  Protocol.cpp  SocketClient.cpp  SocketServer.cpp  SocketServerConnector.cpp  SystemException.cpp  Track.cpp
FastTrackRelease/cmt/: requirements
FastTrackSvc/FastTrackSvc/: IFastTrackSvc.h
FastTrackSvc/cmt/: Doxyfile  requirements
FastTrackSvc/src/: FastTrackSvc.cpp  FastTrackSvc.h  FastTrack_load.cpp  SocketClient.h  SystemException.cpp  SystemException.h  Tracker.cpp  Tracker.h
GpuManager/: CMakeLists.txt  Makefile
GpuManager/GpuAlgorithm/cmt/: requirements
GpuManager/GpuIpc/GpuIpc/: IProtocol.h  SocketClient.h
GpuManager/GpuIpc/src/: IOException.cpp  ThreadedServer.cpp
GpuManager/GpuManager/GpuAlgorithm/: CMakeLists.txt
GpuManager/GpuManager/GpuDriver/src/: DataSender.cpp  Main.cpp
GpuManager/GpuManager/GpuHandler/GpuHandler/: IGpuHandler.h
GpuManager/GpuManager/GpuIpc/: CMakeLists.txt
GpuManager/GpuManager/GpuServer/: CMakeLists.txt
GpuManager/GpuManager/GpuServer/src/: App.cpp  App.h  CommandLine.cpp  MainServer.cpp
GpuManager/GpuServer/src/Api/: Tracker.cpp
GpuManager/GpuService/GpuService/: IGpuService.h
GpuManager/GpuService/src/: GpuService.cpp  GpuService.h  GpuService_dll.cpp  GpuService_load.cpp
GpuManager/GpuService/src/Api/: Tracker.cpp  Tracker.h
GpuManager/Pr/PrPixel/src/: EventSerializer.h  PrPixelHit.h  PrPixelMonitor.cpp  PrPixelTracking.cpp
GpuManager/Pr/PrPixelCuda/src/: GpuPixelSearchByTriplet.cpp  KernelInvoker.cuh
GpuManager/cmake/: CUDA.cmake
IpcGen/: Api.thrift  ApplyApi.cmd  IpcGen.proj
IpcGen/src/: Constant.n  Document.n  Field.n  GeneratorException.n  Header.n  IpcGenerator.n  Main.n  Parser.n  TargetLanguage.n  Type.n
IpcLib/cmt/: requirements
IpcLib/src/: CMakeLists.txt  Protocol.h
PatPixel/.svn/: entries
PatPixel/cmt/: requirements
PatPixel/src/: GPUPixelDataSequencer.cpp  GPUPixelDataSequencer.h  GPUPixelTracking.cpp  GPUPixelTracking.h  PatPixelTracking.cpp  PatPixelTracking.h
cmt/: project.cmt
tbbpixel_library/: New_Algorithm.cpp  New_Algorithm.h  pixel_tbb.cpp  pixel_tbb.h  tools.cpp  tools.h
tbbpixel_library/Release/: New_Algorithm.d  compile_static.sh  init.sh  makefile  pixel_tbb.d  subdir.mk  tools.d
tbbpixel_library/test/: a.out  compile.sh  pixel-sft-event-0.dump  pixel_tbb.h  static_compile.sh  test.cpp
test/: check-correctness.sh  check-perf.sh  compare-perf.py  readme.txt
(+521 files in other folders)
